--- a/client/app/main/main.scss
+++ b/client/app/main/main.scss
@@ -20,10 +20,10 @@
 .hero-unit {
   position: relative;
   padding: 30px 15px;
-  color: #F5F5F5;
+  color: white;
   text-align: center;
   text-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);
-  background: #4393B9;
+  background: $color-primary-4;
 }
 
 .navbar-text {
